Fix photo cropper zoom

--- a/hw-task3/src/components/PhotoCrop/PhotoCrop.css
+++ b/hw-task3/src/components/PhotoCrop/PhotoCrop.css
@@ -4,7 +4,7 @@
   margin: auto;
 }
 
-.PhotoCrop__wrap {
+.PhotoCrop__Cropper {
   position: relative;
   margin-bottom: 20px;
   width: 300px;
